--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ."
+    "start": "ts-node index.ts"
   },
   "keywords": [],
   "author": "Roberts Groza",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^22.5.0",
+    "@types/nodemailer": "^6.4.15",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "axios": "^1.7.5",
+    "dotenv": "^16.4.5",
+    "fast-xml-parser": "^4.4.1",
+    "nodemailer": "^6.9.14"
   }
 }
