--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.5",
     "dotenv": "^16.4.5",
     "fast-xml-parser": "^4.4.1",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "sqlite3": "^5.1.7"
   }
 }
