--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.5.0",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
@@ -20,6 +21,7 @@
     "axios": "^1.7.5",
     "dotenv": "^16.4.5",
     "fast-xml-parser": "^4.4.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "sqlite3": "^5.1.7"
   }
